@@ -1,5 +1,5 @@
 Package: SeqVarTools
-Version: 1.7.4
+Version: 1.7.5
 Type: Package
 Title: Tools for variant data
 Description: An interface to the fast-access storage format for VCF
@@ -9,14 +9,17 @@ Author: Stephanie M. Gogarten, Xiuwen Zheng
 Maintainer: Stephanie M. Gogarten <sdmorris@u.washington.edu>, Xiuwen
         Zheng <zhengx@u.washington.edu>, Adrienne Stilp <amstilp@u.washington.edu>
 Depends: SeqArray (>= 1.1.1)
-Imports: methods, stringr, gdsfmt, GenomicRanges, IRanges, S4Vectors, GWASExactHW, VariantAnnotation
+Imports: methods, stringr, gdsfmt, GenomicRanges, IRanges, S4Vectors, GWASExactHW, VariantAnnotation, Biobase
 Suggests: BiocGenerics, BiocStyle, RUnit
 License: GPL-3
 LazyData: yes
 biocViews: SNP, GeneticVariability, Sequencing, Genetics
-Collate: AllGenerics.R
+Collate: 
+  AllClasses.R
+  AllGenerics.R
   AllUtilities.R
   Methods-SeqVarGDSClass.R
+  Methods-SeqVarData.R
   duplicateDiscordance.R
   hwe.R
   inbreedCoeff.R
